--- a/.github/workflows/bygg_alle_brancher.yml
+++ b/.github/workflows/bygg_alle_brancher.yml
@@ -6,7 +6,7 @@ on:
       - '*'
       - '*/*'
       - '!release/*'
-      - '!master'
+      - 'master'
 
 jobs:
   bygg:
@@ -36,6 +36,3 @@ jobs:
         run: |
           export TZ=CET
           ./gradlew build --stacktrace
-          docker build --tag ${{ env.IMAGE }} .
-          docker login ghcr.io -u ${GITHUB_REPOSITORY} -p ${{ secrets.GITHUB_TOKEN }}
-          docker push ${{ env.IMAGE }}
